--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,11 @@ body {
   align-items: center;
   gap: 2rem;
 }
+.detail_page img{
+  max-width: 500px;
+  /* height: 100%; */
+  object-fit: contain;
+}
 .post_card {
   width: 800px;
 }
@@ -196,4 +201,9 @@ body {
   .add_post{
     width: 350px;
   }
+  .detail_page img{
+  max-width: 300px;
+  /* height: 100%; */
+  object-fit: contain;
+}
 }
